Adjusted the spacing for notifications section - Adjusted the size of the grid columns in the top row of the header so that the middle spacer section takes up less space. This will prevent the notification section's icons from getting clipped in the case that the width of the browser window gets too narrow.

--- a/index.css
+++ b/index.css
@@ -129,7 +129,7 @@
     /* border: 3px solid orange; */
     
     display: grid;
-    grid-template-columns: 8.5fr 1.5fr 3fr;
+    grid-template-columns: 8.5fr 1fr 3.5fr;
 
     height: fit-content;
 }
